[package]
name = "myblog"
version = "0.4.2"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tera = "1"
pulldown-cmark = { version = "0.10", features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "set-header"] }
toml = "0.8"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
regex = "1"
notify = "7"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = "0.4"
http-body-util = "0.1"
